Disabling animations on mobile for readme due to wow.js bug

--- a/assets/stylesheets/partials/_read.scss
+++ b/assets/stylesheets/partials/_read.scss
@@ -137,6 +137,18 @@
   .good-at {
     text-align: right;
   }
+
+  
+  @include mobile {
+    .wow {
+      visibility: visible !important;
+      -webkit-animation: none !important;
+         -moz-animation: none !important;
+           -o-animation: none !important;
+          -ms-animation: none !important;
+              animation: none !important;
+    }
+  }
 }
 
 .sub-title {
